2017-02-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve a global variable naming inconsistency.

	* mingwex/ofmt.c (__mingw_output_format_flag): Rename it as...
	(__mingw_output_format_flags): ...this, at point of definition, and
	update all references, to maintain consistency with usage...
	* mingwex/ofmtctl.c (__mingw_output_format_flags): ...here.

	* mingwex/stdio/pformat.c: Update references.

2017-01-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement strerror_r()/strerror_s() API.

	* mingwex/strerror_r.c: New file; it implements...
	(strerror_r): ...this new POSIX.1-2001 conforming function.

	* include/string.h (strerror_s): Add function prototype, subject to...
	[_MSVCR80_DLL || _WIN32_WINNT_VISTA]: ...this DLL version dependency;
	otherwise implement an inline wrapper function to emulate it, using...
	[_POSIX_C_SOURCE > 200112L] (strerror_r): ...this; add prototype.

	* Makefile.in (libmingwex.a): Add strerror_r.$OBJEXT

2017-01-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid -Wformat noise from snprintf() and vsnprintf()

	* include/stdio.h (snprintf, vsnprintf): Add inline implementations;
	they redirect to "__mingw_" prefixed alternatives, so suppressing the
	effect of automatic format attribute recognition.

2017-01-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove duplicate libmingwex.a entries.

	* mingwex/jmpstub.sx (DLLENTRY): Interpret it.

	* Makefile.in (jmpstub_awk_script): Handle DLLENTRY.
	(libmingwex.a): Remove explicit object file references to...
	(snwprintf, vsnwprintf): ...these.

	* include/stdio.h (snwprintf, vsnwprintf): Map them as __JMPSTUB__
	references to MSVCRT.DLL entry points, via DLLENTRY references to...
	(_snwprintf, _vsnwprintf): ...these, respectively.

	* mingwex/snwprintf.c: Redundant file; delete it.
	* mingwex/vsnwprintf.c: Likewise.

2017-01-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Clean up <limits.h> header file.
